image y background fix

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
               <a href="#PR"><span>0x3.</span> Project</a>
             </li>
             <li class="Resume">
-              <a href="./public/Files/JesusVelezSoto_CV.pdf"> Resume</a>
+              <a href="/Files/JesusVelezSoto_CV.pdf"> Resume</a>
             </li>
           </ul>
           <div class="Main">
             <a href="" class="Logo">JV</a>
-            <i id="Theme" class="bi bi-moon-fill"></i>
           </div>
         </nav>
         <aside class="">
