--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li class="">
               <a href="#PR"><span>0x3.</span> Project</a>
             </li>
-            <li class="Resume">
-              <a href="/Files/JesusVelezSoto_CV.pdf"> Resume</a>
+            <li class="ResumeLink">
+              <a href="./public/Files/JesusVelezSoto_CV.pdf"> Resume</a>
             </li>
           </ul>
           <div class="Main">
