--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>JesusVelez.xyz</title>
   </head>
   <body>
+    <div class="gradient"></div>
     <div class="Portfolio">
       <div class="Menu">
         <div id="menuToggle" class="">
@@ -34,7 +35,7 @@
             </li>
           </ul>
           <div class="Main">
-            <a href="" class="Logo">JV</a>
+            <a href="#Presentation" class="Logo">JV</a>
           </div>
         </nav>
         <aside class="">
@@ -53,7 +54,7 @@
       </div>
 
       <div class="Resume">
-        <div class="Presentation">
+        <div id="Presentation" class="Presentation">
           <div class="logo">
             <div class="Nom">
               <h1 class="glitch" data-text="V">V</h1>
@@ -71,7 +72,7 @@
             </div>
           </div>
           <p class="Job">
-            CAD Designer, FullStack & Embedded <br />
+          FullStack & Embedded 
             Software Engineer
           </p>
         </div>
