--- a/index.html
+++ b/index.html
@@ -146,420 +146,48 @@
             </div>
           </div>
 
-          -->
-          <div class="SliderContainer">
-            <div class="swiper-container">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="public/Icons/react.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/javascript.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/nodejs.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/mysql.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/mongodb.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/rxjs.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/vitejs.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/vuejs.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/css.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/tailwind.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/nextjs.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/expo.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/express.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-container1">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="public/Icons/arm.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/stm.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/c.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/cpp.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/atmel.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/microchip.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/espressif.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/nxp.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/infineon.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/raspberry-pi.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/linux-tux.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/cSharp.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/jira.svg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="public/Icons/flutter.svg" alt="" />
-                </div>
-              </div>
+         -->
+
+          <div class="scroller" data-speed="slow" data-direction="left">
+            <ul class="tag-list scroller__inner">
+              <img src="public/Icons/react.svg" alt="" />
+              <img src="public/Icons/javascript.svg" alt="" />
+              <img src="public/Icons/nodejs.svg" alt="" />
+              <img src="public/Icons/mysql.svg" alt="" />
+              <img src="public/Icons/mongodb.svg" alt="" />
+              <img src="public/Icons/rxjs.svg" alt="" />
+              <img src="public/Icons/vitejs.svg" alt="" />
+              <img src="public/Icons/vuejs.svg" alt="" />
+              <img src="public/Icons/css.svg" alt="" />
+              <img src="public/Icons/tailwind.svg" alt="" />
+              <img src="public/Icons/nextjs.svg" alt="" />
+              <img src="public/Icons/expo.svg" alt="" />
+              <img src="public/Icons/express.svg" alt="" />
+            </ul>
+          </div>
+
+          <div class="scroller" data-direction="right" data-speed="slow">
+            <div class="scroller__inner">
+              <img src="public/Icons/arm.svg" alt="" />
+              <img src="public/Icons/stm.svg" alt="" />
+              <img src="public/Icons/c.svg" alt="" />
+              <img src="public/Icons/cpp.svg" alt="" />
+              <img src="public/Icons/atmel.svg" alt="" />
+              <img src="public/Icons/microchip.svg" alt="" />
+              <img src="public/Icons/espressif.svg" alt="" />
+              <img src="public/Icons/nxp.svg" alt="" />
+              <img src="public/Icons/infineon.svg" alt="" />
+              <img src="public/Icons/raspberry-pi.svg" alt="" />
+              <img src="public/Icons/linux-tux.svg" alt="" />
+              <img src="public/Icons/cSharp.svg" alt="" />
+              <img src="public/Icons/jira.svg" alt="" />
+              <img src="public/Icons/flutter.svg" alt="" />
             </div>
           </div>
         </div>
         <div class="Projects" id="PR">
           <h1 class="ProjectsTitle">Projects</h1>
           <div class="ProjectsGrid">
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">LightWeight RTOS </a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title">
-                      <a href="#">Serial Bootloader for ARM </a>
-                    </h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title">
-                      <a href="#">SD Card Firmware Update</a>
-                    </h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">Esp WebSocket </a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">ESP OTA </a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">C Language Blog</a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">XString Library </a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title">
-                      <a href="#">USB Controller Microchip </a>
-                    </h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title">
-                      <a href="#">Ethernet Controller STM </a>
-                    </h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">ESP GcodeServer </a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title"><a href="#">SouthPark REST-API </a></h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="example-2 card">
-              <div class="wrapper">
-                <div class="header">
-                  <div class="date">
-                    <span class="day">12</span>
-                    <span class="month">Aug</span>
-                    <span class="year">2016</span>
-                  </div>
-                </div>
-                <div class="data">
-                  <div class="content">
-                    <span class="author">Jesus Velez</span>
-                    <h1 class="title">
-                      <a href="#">Restaurant Daily Food App</a>
-                    </h1>
-                    <p class="text">
-                      The antsy bingers of Netflix will eagerly anticipate the
-                      digital release of the Survive soundtrack, out today.
-                    </p>
-                    <div class="codeLink">
-                      <a href="#" class="button">Github</a>
-                      <a href="#" class="button">Link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
             <!--  <div class="Front" style="--bg-image: url('/public/Image/south-park.jpeg')">
               <h2 class="Birthdate">12 Aug 18</h2>
               <div class="Info">
