--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/Styles/Main.css" />
     <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+
+    <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
@@ -76,7 +82,40 @@
             </div>
           </div>
           <p class="Job">FullStack & Embedded Software Engineer</p>
+            <div class="flex gap-3">
+              <a href="" class=" px-5 py-2 me-2 mb-2 text-base font-medium text-white focus:outline-none rounded-full border border-slate-800 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400  dark:hover:text-white dark:hover:bg-gray-700">LinkedIn</a>
+              <a href="" class=" px-5 py-2 me-2 mb-2 text-base font-medium text-white focus:outline-none rounded-full border border-slate-800 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400  dark:hover:text-white dark:hover:bg-gray-700">Github</a>
+              <a href="" class=" px-5 py-2 me-2 mb-2 text-base font-medium text-white focus:outline-none rounded-full border border-slate-800 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400  dark:hover:text-white dark:hover:bg-gray-700">Jvelez13Soto@outlook.com</a>
+
+            </div>
+          <div class="scroller" data-speed="slow" data-direction="left">
+            <ul class="tag-list scroller__inner">
+              <img src="public/Icons/linux-tux.svg" alt="" />
+              <img src="public/Icons/cpp.svg" alt="" />
+              <img src="public/Icons/python.svg" alt="" />
+              <img src="public/Icons/react.svg" alt="" />
+              <img src="public/Icons/infineon.svg" alt="" />
+              <img src="public/Icons/javascript.svg" alt="" />
+              <img src="public/Icons/nodejs.svg" alt="" />
+              <img src="public/Icons/mysql.svg" alt="" />
+              <img src="public/Icons/nxp.svg" alt="" />
+              <img src="public/Icons/mongodb.svg" alt="" />
+              <img src="public/Icons/css.svg" alt="" />
+              <img src="public/Icons/tailwind.svg" alt="" />
+              <img src="public/Icons/stm.svg" alt="" />
+              <img src="public/Icons/nextjs.svg" alt="" />
+              <img src="public/Icons/arm.svg" alt="" />
+              <img src="public/Icons/c.svg" alt="" />
+              <img src="public/Icons/atmel.svg" alt="" />
+              <img src="public/Icons/microchip.svg" alt="" />
+              <img src="public/Icons/espressif.svg" alt="" />
+              <img src="public/Icons/cSharp.svg" alt="" />
+              <img src="public/Icons/flutter.svg" alt="" />
+            </ul>
+          </div>
+
         </div>
+
         <div id="About" class="About">
           <img src="public/Image/Me.jpg" alt="" class="" />
           <div class="Info">
@@ -94,165 +133,88 @@
           </div>
         </div>
         <div id="Xp" class="Knowledge">
-          <h1>My Expertise</h1>
-          <!--
-            <div class="Expertises">
-            <div class="Expertise">
-              <div class="Name">
-                <i class="bi bi-cpu-fill"></i>
-                <h1 class="NameSkill">
-                  Embedded <br />
-                  Development
-                </h1>
-              </div>
-              <p class="Skills" Language="*.c">
-                Experienced in RTOS ( <a href=""> FreeRTOS</a> &
-                <a href="">Micrium RTOS</a> ), <a href="">AUTOSAR</a> &
-                <a href="">ARM</a> Architecture & Linux Embebido.
-                <br />
-                <br />Microcontrollers:
-                <span>Microchip, AVR, STM, NXP, Espressif</span>
-              </p>
-            </div>
-            <div class="Divider"></div>
-            <div class="Expertise">
-              <div class="Name">
-                <i class="bi bi-browser-firefox"></i>
-                <h1 class="NameSkill">
-                  Fullstack <br />
-                  Development
-                </h1>
-              </div>
-              <p class="Skills" Language="*.js">
-                2 years of experience, on freelance development in HTML, SCSS,
-                JS, React & Next JS frameworks.
-                <br />
-                <br />
-                Uniting Embedded Systems, Backend & Frontend with Espressif
-              </p>
-            </div>
-            <div class="Divider"></div>
-            <div class="Expertise">
-              <div class="Name">
-                <i class="bi bi-display"></i>
-                <h1 class="NameSkill">Desktop <br />Development</h1>
-              </div>
-              <p class="Skills" Language="*.exe">
-                Skilled in the development of desktop applications with
-                applications in Computer Vision and Communications with Embedded
-                Systems using <span>Python</span>, <span>.NET</span> and
-                <span>C++</span>.
-              </p>
-            </div>
-          </div>
+          <h1>Work Experience</h1>
 
-         -->
+          <ol class="relative border-s border-gray-200 dark:border-gray-700">
+            <li class="ms-6">
+              <div
+                class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+              ></div>
+              <time class="text-lg font-normal leading-none text-white"
+                >June 2022 - Currently</time
+              >
+              <h3 class="text-3xl font-normal mb-2 mt-3 setColor">
+                Software Engineer Jr.
+              </h3>
+              <h2 class="text-lg font-normal text-white mb-5">
+                Continental R&D Guadalajara
+              </h2>
+              <ul>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Implementation of Software Requirements and Unit Tests for
+                    Traile & Gateway Projects
+                  </p>
+                </ol>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Design of Diagrams for Software Architecture
+                  </p>
+                </ol>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Resolution of Software PRs using debugger, CAnoe, Electronic
+                    Analysis
+                  </p>
+                </ol>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Responsible for software release management and deployment
+                    across various model years
+                  </p>
+                </ol>
+              </ul>
+            </li>
+            <li class="mt-14 ms-6">
+              <div
+                class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+              ></div>
+              <time class="text-lg font-normal leading-none text-white"
+                >April 2022 - June 2022</time
+              >
+              <h3 class="text-3xl font-normal mb-2 mt-3 setColor">
+                Software Developer Trainee
+              </h3>
+              <h2 class="text-lg font-normal text-white mb-5">
+                Continental R&D Guadalajara
+              </h2>
+              <ul>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Analysis of PRs of Hardware and Software
+                  </p>
+                </ol>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Software architecture correction.
+                  </p>
+                </ol>
+                <ol>
+                  <p class="mb-1 text-base font-normal text-gray-200">
+                    Creation of Software Requirements
+                  </p>
+                </ol>
+              </ul>
+            </li>
+          </ol>
 
-          <div class="scroller" data-speed="slow" data-direction="left">
-            <ul class="tag-list scroller__inner">
-              <img src="public/Icons/react.svg" alt="" />
-              <img src="public/Icons/javascript.svg" alt="" />
-              <img src="public/Icons/nodejs.svg" alt="" />
-              <img src="public/Icons/mysql.svg" alt="" />
-              <img src="public/Icons/mongodb.svg" alt="" />
-              <img src="public/Icons/rxjs.svg" alt="" />
-              <img src="public/Icons/vitejs.svg" alt="" />
-              <img src="public/Icons/vuejs.svg" alt="" />
-              <img src="public/Icons/css.svg" alt="" />
-              <img src="public/Icons/tailwind.svg" alt="" />
-              <img src="public/Icons/nextjs.svg" alt="" />
-              <img src="public/Icons/expo.svg" alt="" />
-              <img src="public/Icons/express.svg" alt="" />
-            </ul>
-          </div>
+          
 
-          <div class="scroller" data-direction="right" data-speed="slow">
-            <div class="scroller__inner">
-              <img src="public/Icons/arm.svg" alt="" />
-              <img src="public/Icons/stm.svg" alt="" />
-              <img src="public/Icons/c.svg" alt="" />
-              <img src="public/Icons/cpp.svg" alt="" />
-              <img src="public/Icons/atmel.svg" alt="" />
-              <img src="public/Icons/microchip.svg" alt="" />
-              <img src="public/Icons/espressif.svg" alt="" />
-              <img src="public/Icons/nxp.svg" alt="" />
-              <img src="public/Icons/infineon.svg" alt="" />
-              <img src="public/Icons/raspberry-pi.svg" alt="" />
-              <img src="public/Icons/linux-tux.svg" alt="" />
-              <img src="public/Icons/cSharp.svg" alt="" />
-              <img src="public/Icons/jira.svg" alt="" />
-              <img src="public/Icons/flutter.svg" alt="" />
-            </div>
-          </div>
+
         </div>
         <div class="Projects" id="PR">
           <h1 class="ProjectsTitle">Projects</h1>
-          <div class="ProjectsGrid">
-            <!--  <div class="Front" style="--bg-image: url('/public/Image/south-park.jpeg')">
-              <h2 class="Birthdate">12 Aug 18</h2>
-              <div class="Info">
-                <h2>Afran Vlez</h2>
-                <h3>South Park REST API</h3>
-                <p>
-                  Simple REST API for South Park Characters, you can get all
-                  info about the Cartoon, list of Groups, Characters, Family,
-                  Celebrities. This API have its own Website to watch all about
-                  the most irreverent Cartoon
-                </p>
-                <div class="Tools">
-                  <img src="./public/Icons/express.svg" width="12px" height="20px"  />
-                  <img src="./public/Icons/nodejs.svg" width="12px" height="20px"/>
-                  <img src="./public/Icons/css.svg" width="12px" height="20px" />
-                </div>
-                <div class="Links">
-                  <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-</svg></a>
-                  <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
-  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
-</svg></a>
-                </div>
-              </div>
-            </div>
-            <div class="Embedded" style="--bg-image: url('/public/Image/Bike-Safety.jpg')">
-            <h2 class="Birthdate">12 Aug 18</h2>
-              <div class="Info">
-                <h2>Afran Vlez</h2>
-                <h3>South Park REST API</h3>
-                <p>
-                  Simple REST API for South Park Characters, you can get all
-                  info about the Cartoon, list of Groups, Characters, Family,
-                  Celebrities. This API have its own Website to watch all about
-                  the most irreverent Cartoon
-                </p>
-                <div class="Tools">
-                  <img src="./public/Icons/express.svg" width="12px" height="20px"  />
-                  <img src="./public/Icons/nodejs.svg" width="12px" height="20px"/>
-                  <img src="./public/Icons/css.svg" width="12px" height="20px" />
-                </div>
-                <div class="Links">
-                  <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-</svg></a>
-                  <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
-  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
-</svg></a>
-                </div>
-              </div>
-            </div>
-            <div class="Embedded " style="--bg-image: url('/public/Image/Camera_bus.jpg')"></div>
-            <div class="Embedded " style="--bg-image: url('')"></div>
-            <div class="Embedded " style="--bg-image: url('')" ></div>
-            <div class="Front " style="--bg-image: url('/public/Image/looney-tunes.jpg')"></div>
-            <div class="Front " style="--bg-image: url('/public/Image/Restaurant.jpg')"></div>
-            <div class="Desktop " style="--bg-image: url('')"></div>
-            <div class="Desktop " style="--bg-image: url('')"></div>
-            <div class="Desktop " style="--bg-image: url('')"></div>
-            <div class="Desktop " style="--bg-image: url('')"></div>
-            <div class="Front " style="--bg-image: url('/public/Image/sticky.jpg')"></div> -->
-          </div>
+          <div class="ProjectsGrid"></div>
         </div>
       </div>
 
@@ -265,9 +227,14 @@
             <a href="https://www.linkedin.com/in/jesus-velez-soto-28ab11156/"
               ><i class="bi bi-linkedin"></i>
             </a>
-            <a href="https://codepen.io/theJVS"
-              >
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="m502.285 159.704l-234-156c-7.987-4.915-16.511-4.96-24.571 0l-234 156C3.714 163.703 0 170.847 0 177.989v155.999c0 7.143 3.714 14.286 9.715 18.286l234 156.022c7.987 4.915 16.511 4.96 24.571 0l234-156.022c6-3.999 9.715-11.143 9.715-18.286V177.989c-.001-7.142-3.715-14.286-9.716-18.285zM278 63.131l172.286 114.858l-76.857 51.429L278 165.703V63.131zm-44 0v102.572l-95.429 63.715l-76.857-51.429L234 63.131zM44 219.132l55.143 36.857L44 292.846v-73.714zm190 229.715L61.714 333.989l76.857-51.429L234 346.275v102.572zm22-140.858l-77.715-52l77.715-52l77.715 52l-77.715 52zm22 140.858V346.275l95.429-63.715l76.857 51.429L278 448.847zm190-156.001l-55.143-36.857L468 219.132v73.714z"/></svg>            </a>
+            <a href="https://codepen.io/theJVS">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path
+                  fill="currentColor"
+                  d="m502.285 159.704l-234-156c-7.987-4.915-16.511-4.96-24.571 0l-234 156C3.714 163.703 0 170.847 0 177.989v155.999c0 7.143 3.714 14.286 9.715 18.286l234 156.022c7.987 4.915 16.511 4.96 24.571 0l234-156.022c6-3.999 9.715-11.143 9.715-18.286V177.989c-.001-7.142-3.715-14.286-9.716-18.285zM278 63.131l172.286 114.858l-76.857 51.429L278 165.703V63.131zm-44 0v102.572l-95.429 63.715l-76.857-51.429L234 63.131zM44 219.132l55.143 36.857L44 292.846v-73.714zm190 229.715L61.714 333.989l76.857-51.429L234 346.275v102.572zm22-140.858l-77.715-52l77.715-52l77.715 52l-77.715 52zm22 140.858V346.275l95.429-63.715l76.857 51.429L278 448.847zm190-156.001l-55.143-36.857L468 219.132v73.714z"
+                />
+              </svg>
+            </a>
           </div>
         </div>
         <div class="Designed">
